--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/stiles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Producto#1</title>
 </head>
 <body>
@@ -17,5 +17,7 @@
         <a href="#" class="card-button"> Quiero saber más</a>
     </div>
     </article>
+
+
 </body>
 </html>
